@@ -1,3 +1,13 @@
 = Release notes v. 5.1
 
 == Table of Contents
+* SCA exemption is supported
+
+== SCA exemption is supported
+
+From now on, SCA exemption is possible for bulk and single payment initiation. To support this, return type of
+`AuthorisationSpi#authorisePsu` method was changed from `SpiAuthorisationStatus` to `SpiPsuAuthorisationResponse`.
+`SpiPsuAuthorisationResponse` is a new domain class, which contains authorisation status as well as boolean `scaExempted`
+field, which is taken into account by XS2A for performing SCA exemption. If the psu authorisation spi response for
+bulk or single will be successful and `scaExempted` is `true` - SCA will not be performed, 'PaymentSpi#executePaymentWithoutSca'
+will be invoked and authorisation status will be set to `EXEMPTED`. SCA exemption is supported for multilevel SCA too.
